--- a/Client/src/Client.Components/Checkout/FulfilmentModal.razor
+++ b/Client/src/Client.Components/Checkout/FulfilmentModal.razor
@@ -1,7 +1,6 @@
 @using SunRaysMarket.Client.Components.Tabs
 @namespace SunRaysMarket.Client.Components
 @inherits ModalContentBase<FulfillmentModel>
-
 @rendermode @(new InteractiveWebAssemblyRenderMode(prerender: false))
 
 @if (TabsComponentShouldLoad)
@@ -17,13 +16,20 @@
                     <ChildContent>
                         <EditForm EditContext="@PickupContext" FormName="PickupTimeSlotsForm">
                             <InputRadioGroup @bind-Value="PickupModel!.SelectedTimeSlotId">
-                                @foreach (var timeSlot in PickupTimeSlots)
-                                {
-                                    <div class="timeslot">
-                                        <InputRadio Value="timeSlot.Id"/>
-                                        <label>@timeSlot.TimeSlotDefinition.ToString()</label>
-                                    </div>
-                                }
+                                <div class="timeslots-display">
+                                    @foreach (var timeSlot in PickupTimeSlots)
+                                    {
+                                        <div class="timeslot">
+                                            <InputRadio
+                                                id="@($"timeslot-{timeSlot.Id}")"
+                                                class="d-none timeslot__radio"
+                                                Value="timeSlot.Id"/>
+                                            <label for="timeslot-@timeSlot.Id" class=timeslot__label>
+                                                @timeSlot.TimeSlotDefinition.TimeSlotRange.ToString()
+                                            </label>
+                                        </div>
+                                    }
+                                </div>
                             </InputRadioGroup>
                         </EditForm>
                     </ChildContent>
@@ -39,13 +45,20 @@
                         <ChildContent>
                             <EditForm EditContext="@DeliveryContext" FormName="DeliveryTimeSlotsForm">
                                 <InputRadioGroup @bind-Value="DeliveryModel!.SelectedTimeSlotId">
-                                    @foreach (var timeSlot in DeliveryTimeSlots)
-                                    {
-                                        <div class="timeslot">
-                                            <InputRadio Value="timeSlot.Id"/>
-                                            <label>@timeSlot.TimeSlotDefinition.ToString()</label>
-                                        </div>
-                                    }
+                                    <div class="timeslots-display">
+                                        @foreach (var timeSlot in DeliveryTimeSlots)
+                                        {
+                                            <div class="timeslot">
+                                                <InputRadio
+                                                    id="@($"timeslot-{timeSlot.Id}")"
+                                                    class="d-none timeslot__radio"
+                                                    Value="timeSlot.Id"/>
+                                                <label for="timeslot-@timeSlot.Id" class=timeslot__label>
+                                                    @timeSlot.TimeSlotDefinition.TimeSlotRange.ToString()
+                                                </label>
+                                            </div>
+                                        }
+                                    </div>
                                 </InputRadioGroup>
                             </EditForm>
                         </ChildContent>
