--- a/styles/scss/pages/_checkout.scss
+++ b/styles/scss/pages/_checkout.scss
@@ -10,7 +10,6 @@
     column-gap: var.$spacing-4xl;
   }
   
-  
   &__sections {
     grid-column: left;
     grid-row: content;
@@ -39,6 +38,7 @@
   display: grid;
   grid-template-columns: [content-start left-start] 1fr [left-end right-start] max-content [right-end content-end];
   grid-template-rows: [content-start upper-start] min-content [upper-end lower-start] 1fr [lower-end content-end];
+  row-gap: var.$spacing-m;
   
   padding: var.$spacing-l;
   border: 2px solid var.$color-grey-dark-2;
@@ -97,4 +97,36 @@
   display: flex;
   flex-direction: column;
   gap: var.$spacing-xl;
+}
+
+.timeslots-display {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: var.$spacing-s;
+}
+
+.timeslot {
+  
+  &__label {
+    @include mxn.btn-base;
+    display: block;
+    padding: calc(var.$spacing-s + 1px);
+    border: 1.5px solid var.$color-grey-dark-1;
+    border-radius: 2rem;
+    background-color: var.$color-grey-light-1;
+    transition: transform 200ms ease-in-out, border-color 150ms ease-out;
+    
+    &:hover {
+      transform: translateY(-2px) scale(1.005);
+    }
+  }
+  
+  &__radio:checked ~ &__label {
+    padding: var.$spacing-s;
+    border: 2.5px solid var.$color-success;
+    background-color: var.$color-success-light;
+  }
+  
 }
