--- a/Server/src/Server.Web/wwwroot/css/dev/main.css
+++ b/Server/src/Server.Web/wwwroot/css/dev/main.css
@@ -1041,7 +1041,7 @@ body {
   display: grid;
   grid-template-columns: [content-start left-start] 1fr [left-end right-start] max-content [right-end content-end];
   grid-template-rows: [content-start upper-start] min-content [upper-end lower-start] 1fr [lower-end content-end];
-  row-gap: 2.4rem;
+  row-gap: 3.2rem;
   padding: 3.2rem;
   border: 2px solid #545454;
   border-radius: 2rem;
@@ -1049,6 +1049,7 @@ body {
 .checkout-section__heading {
   grid-column: left;
   grid-row: upper;
+  font-size: 2.4rem;
 }
 .checkout-section__action-btn {
   grid-column: right;
