Added store location selection option pickup orders.

--- a/Client/src/Client.Components/Checkout/AddressEntryModalContent.razor
+++ b/Client/src/Client.Components/Checkout/AddressEntryModalContent.razor
@@ -52,7 +52,7 @@
             {"AddressId", addressId}
         };
 
-        await ChangeModalContent<FulfilmentModal, FulfillmentModel>(options, tempData: tempData);
+        await ChangeModalContent<FulfillmentModal, AddressModel>(options, tempData: tempData);
         
     }
 }
