Added media queries to facilitate responsive design.

--- a/Server/src/Server.Components/HeroSections/HeroHome.razor
+++ b/Server/src/Server.Components/HeroSections/HeroHome.razor
@@ -1,12 +1,14 @@
 @namespace SunRaysMarket.Server.Components
 
 <div class="hero-home">
-        <img src="img/hero-bg.png" alt="" class="hero-home__img"/>
+    <img src="img/hero-bg.png" alt="" class="hero-home__img"/>
+    <div class="hero-home__grid">
         <div class="hero-home__content">
             <h3 class="hero-home__heading">Save up to 50% on produce this week</h3>
             <NavLink href="#" class="btn btn--primary"> Shop Now </NavLink>
         </div>
     </div>
+</div>
 
 
 @code {
