--- a/Server/src/Server.Web/Components/Layout/MainLayout.razor
+++ b/Server/src/Server.Web/Components/Layout/MainLayout.razor
@@ -16,8 +16,9 @@
     </div>
     <nav class="nav">
         <div class="nav__content">
-            <NavDepartments />
-            <NavAccount />
+            <NavToggle />
+            <NavMenu/>
+            <NavAccount/>
         </div>
     </nav>
     <PageLayout LayoutType="LayoutType.Page">
