--- a/Server/src/Server.Web/Components/Layout/NavMenu.razor
+++ b/Server/src/Server.Web/Components/Layout/NavMenu.razor
@@ -1,29 +1,28 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">WebBlazor</a>
-    </div>
+﻿@inherits OwningComponentBase<IUnitOfWork>
+
+<div class="nav__menu">
+    @if (Departments.Any())
+    {
+        <ul class="nav__list">
+            @foreach (var department in Departments)
+            {
+                <li class="nav__item">
+                    <NavLink href="@($"departments/{department.Slug}/{department.Id}")"
+                             class="nav__link">
+                        @department.Name
+                    </NavLink>
+                </li>
+            }
+        </ul>
+    }
 </div>
 
-<input type="checkbox" title="Navigation menu" class="navbar-toggler"/>
+@code {
+    private IEnumerable<DepartmentListModel> Departments { get; set; } = [];
 
-<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
+    protected override async Task OnInitializedAsync()
+    {
+        Departments = await Service.DepartmentRepository.GetAllAsync();
+    }
 
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div>
-    </nav>
-</div>
+}
