--- a/Server/src/Server.Web/Components/App.razor
+++ b/Server/src/Server.Web/Components/App.razor
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-enhance-nav="false">
 
 <head>
     <meta charset="utf-8"/>
@@ -12,10 +12,9 @@
     <HeadOutlet/>
 </head>
 
-<body hx-boost>
+<body>
 <Routes/>
 <script src="_framework/blazor.web.js"></script>
-<script src="lib/htmx/htmx.min.js"></script>
 </body>
 
 </html>
