--- a/Server/src/Server.Web/Components/Layout/MainLayout.razor
+++ b/Server/src/Server.Web/Components/Layout/MainLayout.razor
@@ -6,9 +6,9 @@
 <PageLayout LayoutType="LayoutType.Application" Element="div" xmlns="http://www.w3.org/1999/html">
     <div class="topbar">
         <div class="topbar__content">
-            <a href="#" class="topbar__brand">
+            <NavLink href="/" class="topbar__brand">
                 <img src="img/logo.png" alt="Sun Rays Market Logo"/>
-            </a>
+            </NavLink>
 
             <ProductSearch />
             <TopBarNav />
