--- a/Server/src/Server.Web/Components/Pages/Department.razor
+++ b/Server/src/Server.Web/Components/Pages/Department.razor
@@ -4,18 +4,19 @@
 
 
 <PageLayout ContentWidth="ContentWidth.PageFull">
-    <ProductSection Heading="Featured Products" FeaturedProducts="@Products" />
+    <ProductSection Heading="Featured Products" StreamedProducts="@StreamedProducts" />
 </PageLayout>
 
 @code {
     [Parameter] public int Id { get; set; }
     [Parameter] public string Slug { get; set; } = string.Empty;
 
-    private IAsyncEnumerable<ProductListModel> Products { get; set; } = default!;
+    private IAsyncEnumerable<ProductListModel> StreamedProducts { get; set; } = default!;
 
     protected override void OnInitialized()
     {
-        Products = Service.GetAllProductsAsync(Id);
+        StreamedProducts = Service.GetAllProductsAsync(Id)!;
     }
+    
 
 }
